# fathom

./: .gitignore  CLAUDE.md  LICENSE  METHODOLOGY.md  Makefile  README.md  pyproject.toml  tests_to_fix.txt  walkthrough.md
.antigravitycli/: 102a735d-43b8-45c5-980c-aaf6ed05ade7.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
benchmarks/: BENCHMARKS.md  README.md  __init__.py  artifacts.py  benchmark_engine.py  modal_entrypoint.py  needle_task.py
benchmarks/ablation/: README.md  config.yaml  modal_ablation.py
benchmarks/common/: __init__.py  activation_profile.py  artifacts.py  configs.py  dps_extractor.py  grad_norms.py  inference_latency.py  jsonl_logger.py  lightning_engine.py  metrics.py  modal_utils.py  param_count.py  run_metadata.py
benchmarks/depth_needle/: README.md  config.yaml  last_spawn.json  modal_depth_needle.py
benchmarks/depth_preservation/: README.md  config.yaml  last_spawn.json  modal_depth_preservation.py  modal_dps.py
benchmarks/inference_memory/: README.md  config.yaml  modal_inference_memory.py
benchmarks/iso_flop/: README.md  config.yaml  modal_iso_flop.py
benchmarks/lm_quality/: README.md  config.yaml  last_spawn.json  modal_lm_quality.py
benchmarks/natural_niah/: README.md  config.yaml  modal_natural_niah.py
benchmarks/scaling_efficiency/: README.md  config.yaml  last_spawn.json  modal_scaling_efficiency.py
conf/: config.yaml
conf/data/: tinystories.yaml  wikitext103.yaml
conf/model/: attnres.yaml  block_attnres.yaml  full_attnres.yaml  mhc.yaml  mhc_lite.yaml  recurrent_residual.yaml  standard.yaml  swda_lr.yaml  vega.yaml
conf/trainer/: default.yaml
scripts/: __init__.py  render_summary.py
scripts/ingest/: __init__.py  collect.py  schemas.py
scripts/plots/: __init__.py  dps_curves.py  inference_memory.py  iso_flop.py  loss_curves.py  scaling_pareto.py  style.py
scripts/tables/: __init__.py  ablation_table.py  dps_table.py  format.py  iso_flop_table.py  lm_quality_table.py  niah_table.py
src/: data.py  data_needle.py  train.py
src/modules/: __init__.py  attention.py  attnres_block.py  ffn.py  hyper_connections.py  norm.py  recurrent_residual.py  swda_lr.py  transformer.py  transformer_layer.py  vega.py
tests/: conftest.py  test_activation_profile.py  test_attention.py  test_attnres_block.py  test_benchmark_artifacts.py  test_design_ladder.py  test_dps_metric.py  test_ffn_norm.py  test_grad_norms.py  test_hyper_connection.py  test_inference_latency.py  test_ingest.py  test_mhc_integration.py  test_plots.py  test_render_summary.py  test_rr_cell.py  test_run_metadata.py  test_run_metadata_artifacts.py  test_swda_lr_cell.py  test_tables.py  test_transformer_decoder.py  test_transformer_integration.py  test_transformer_layer.py  test_vega_cell.py
