[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "recurrent-residuals"
version = "0.1.0"
description = "Recurrent Residuals and Block Attention Residuals for transformer language models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "lightning>=2.2.0",
    "wandb>=0.16.0",
    "datasets>=2.18.0",
    "transformers>=4.39.0",   # tokenizer only
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = [
    "ANN101",  # self type annotation not required
    "ANN102",  # cls type annotation not required
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # no annotations required in tests

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

# ── Pyright ───────────────────────────────────────────────────────────────────
[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
