[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recurrent-residuals"
version = "0.1.0"
description = "Comparing VEGA, Recurrent Residuals, and Attention Residuals for transformer LMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "lightning>=2.2.0",
    "datasets>=2.18.0",
    "pyarrow>=15.0.0",
    "transformers>=4.39.0",   # tokenizer only
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "pyrefly>=0.14.0",
]
benchmarks = [
    "modal>=1.4.0",
    "wandb>=0.17.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = [
    "ANN401",  # flexible framework callbacks/config objects
    "N802",    # pytest fixture names use established short aliases
    "N803",    # pytest fixture arguments use established short aliases
    "N806",    # tensor-shape aliases such as B/S are conventional here
    "N812",    # common torch/lightning aliases are clearer locally
    "F722",    # jaxtyping shape annotations are not valid python type syntax
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # no annotations required in tests

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

# ── Pyright ───────────────────────────────────────────────────────────────────
[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
