[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fathom"
version = "0.1.0"
description = "Comparing VEGA, Recurrent Residuals, and Attention Residuals for transformer LMs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.12.1",
    "hydra-core>=1.3.3",
    "omegaconf>=2.3.1",
    "lightning>=2.6.5",
    "datasets>=5.0.0",
    "pyarrow>=24.0.0",
    "transformers>=5.12.1",   # tokenizer only
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "pyrefly>=1.1.1",
]
benchmarks = [
    "modal>=1.5.0",
    "wandb>=0.27.2",
]
reports = [
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "tabulate>=0.10.0",
]

[project.urls]
Repository = "https://github.com/abderahmane-ai/fathom"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = [
    "ANN401",  # flexible framework callbacks/config objects
    "N802",    # pytest fixture names use established short aliases
    "N803",    # pytest fixture arguments use established short aliases
    "N806",    # tensor-shape aliases such as B/S are conventional here
    "N812",    # common torch/lightning aliases are clearer locally
    "F722",    # jaxtyping shape annotations are not valid python type syntax
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # no annotations required in tests

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

# ── FSDP (multi-GPU) ──────────────────────────────────────────────────────────
# When scaling to multi-node, use TransformerDecoder.get_fsdp_wrap_policy()
# to wrap each TransformerLayer individually.  Weight-tied depth cells
# (rr_cell, vega_cell) are O(d) parameters shared across all layers — FSDP
# handles shared parameters safely.  Leaving them unwrapped reduces
# all-reduce overhead.

# ── Pyright ───────────────────────────────────────────────────────────────────
[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
